Ajout des traductions pour ce qui à été fait des tickets

--- a/src/views/dashboard/ticket.html
+++ b/src/views/dashboard/ticket.html
@@ -28,7 +28,7 @@
     <table>
       <thead>
         <tr>
-          <th width="60%">{{ translate 'DASHBOARD_TICKET_TITLE' }}</th>
+          <th width="60%">{{ translate 'DASHBOARD_TICKET_TICKETTITLE' }}</th>
           <th>{{ translate 'DASHBOARD_TICKET_STATUS' }}</th>
           <th>{{ translate 'DASHBOARD_TICKET_CREATEDAT' }}</th>
           <th>{{ translate 'DASHBOARD_TICKET_UPDATEDAT' }}</th>
