--- a/src/views/dashboard/ticket.html
+++ b/src/views/dashboard/ticket.html
@@ -16,43 +16,35 @@
 
 <div class="container-fluid" style="padding-bottom: 60px;">
   <div class="row justify-content-center">
-    <h2>{{ translate 'DASHBOARD_TICKET_TITLE' }}</h2>
+    <h2>{{ translate 'DASHBOARD_TICKET_TITLE' }} - <span id="ticket-title"><i class="fas fa-circle-notch fa-spin fa-2x"></i></span></h2>
   </div>
-  <div class="row justify-content-center" id="tickets-wait">
+  <div class="row justify-content-center" id="comments-wait">
     <i class="fas fa-circle-notch fa-spin fa-2x"></i>
   </div>
-  <div class="row flex-column justify-content-center align-items-center" id="noticket" style="display: none">
-    <h3>{{ translate 'DASHBOARD_TICKET_NOTICKET' }}</h3>
+  <div class="row flex-column justify-content-center align-items-center" id="nocomment" style="display: none">
+    <h3>{{ translate 'DASHBOARD_TICKET_NOCOMMENT' }}</h3>
   </div>
-  <div class="row" id="tickets-list-row" style="display: none">
+  <div class="row" id="comments-list-row" style="display: none">
     <table>
       <thead>
         <tr>
-          <th width="60%">{{ translate 'DASHBOARD_TICKET_TICKETTITLE' }}</th>
-          <th>{{ translate 'DASHBOARD_TICKET_STATUS' }}</th>
-          <th>{{ translate 'DASHBOARD_TICKET_CREATEDAT' }}</th>
-          <th>{{ translate 'DASHBOARD_TICKET_UPDATEDAT' }}</th>
-          <th>Actions</th>
+          <th>{{ translate 'DASHBOARD_TICKET_COMMENT_AUTHOR' }}</th>
+          <th width="60%">{{ translate 'DASHBOARD_TICKET_COMMENT_CONTENT' }}</th>
+          <th>{{ translate 'DASHBOARD_TICKET_COMMENT_CREATEDAT' }}</th>
         </tr>
       </thead>
-      <tbody id="tickets-list">
+      <tbody id="comments-list">
       </tbody>
     </table>
   </div>
-  <div class="row justify-content-center paginator" id="tickets-pagination"></div>
+  <div class="row justify-content-center paginator" id="comments-pagination"></div>
 </div>
 
-<table id="ticket-template" class="d-none">
+<table id="comment-template" class="d-none">
   <tr>
-    <td width="60%" class="ticket-title"></td>
-    <td class="ticket-status"></td>
-    <td class="ticket-created"></td>
-    <td class="ticket-updated"></td>
-    <td class="ticket-actions">
-      <a href="" class="btn btn-primary btn-sm btn-view-ticket">
-        <i class="fas fa-eye"></i>
-      </a>
-    </td>
+    <td class="comment-author"></td>
+    <td width="60%" class="comment-content"></td>
+    <td class="comment-created"></td>
   </tr>
 </table>
 
@@ -63,27 +55,18 @@
 <script type="text/javascript" src="/scripts/paginator.js" ></script>
 
 <script type="text/javascript">
-  var ticketPageSize = 10;
-  var paginatorTickets = null;
+  var ticket_id = {{ ticket_id }};
+  var commentPageSize = 10;
+  var paginatorComments = null;
 
   $(function() {
-    var url = new URL(window.location.href);
-    var page = url.searchParams.get('page') || 1;
-    paginatorTickets = new Paginator($('#tickets-pagination'));
+    paginatorComments = new Paginator($('#comments-pagination'));
 
-    paginatorTickets.setOnPaginateChange(function(page) {
-      history.pushState({page: page}, '', '?page=' + page);
-      getUserTickets(page, ticketPageSize, paginatorTickets);
+    paginatorComments.setOnPaginateChange(function(page) {
+      getTicketComments(ticket_id, page, commentPageSize, paginatorComments);
     });
 
-    window.onpopstate = function(event) {
-      var page = 1;
-      if (event.state !== null)
-        page = event.state.page;
-      getUserTickets(page, ticketPageSize, paginatorTickets);
-    };
-
-    getUserTickets(page, ticketPageSize, paginatorTickets);
+    getTicketComments(ticket_id, 1, commentPageSize, paginatorComments);
   });
 </script>
 
