Continuation de la fonctionnalité de ticketing

--- a/src/views/dashboard/ticket.html
+++ b/src/views/dashboard/ticket.html
@@ -21,6 +21,9 @@
   <div class="row justify-content-center" id="comments-wait">
     <i class="fas fa-circle-notch fa-spin fa-2x"></i>
   </div>
+  <div class="row flex-column justify-content-center align-items-center" id="ticket-content">
+    <h4></h4>
+  </div>
   <div class="row flex-column justify-content-center align-items-center" id="nocomment" style="display: none">
     <h3>{{ translate 'DASHBOARD_TICKET_NOCOMMENT' }}</h3>
   </div>
