Contenu page accueil

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -30,13 +30,16 @@
         <img src="/images/logo_testify.png" width="300px">
       </div>
       <div class="col-6">
-        <h3>Testify</h3>
-        <p>Description du produit</p>
-        <p> Nam ut justo eget quam aliquam bibendum nec et erat. Praesent aliquet justo at eros pellentesque sollicitudin.
-          Proin pharetra scelerisque tempus. Phasellus consequat, elit semper finibus fringilla, enim urna scelerisque sapien, nec aliquet
-          ligula eros id libero. Nullam ut gravida quam, sit amet commodo quam. Donec egestas tortor vel lorem vulputate, ut vulputate nisi blandit.
-          Sed commodo varius augue eget fringilla. Nam ut justo eget quam aliquam bibendum nec et erat. Nam ut justo eget quam aliquam bibendum nec et erat.
-          Nam ut justo eget quam aliquam bibendum nec et erat.
+        <br>
+      <br>
+        <p> <strong>Testify</strong> est un service destiné à la réalisation d’un système de mesures psychotechniques,
+          dans le cadre de la formation et de l’évaluation des compétences de conducteurs et pilotes.</p>
+
+        <p>
+          Grâce à Testify il vous sera possible de lancer les tests de réflexes psychotechniques de
+          manière organisé et simplifié grâce à ses fonctionnalités, en plus de cela, Testify permet une
+          gestion et une communication des données entre le système et ses utilisateurs. Testify est un service
+          connecté et reconfigurable, il s'adapte parfaitement à vos besoins.
         </p>
       </div>
     </div>
@@ -46,9 +49,11 @@
     <div class="row">
       <div class="col-6">
         <h3>Nos offres</h3>
-        <p>Achat définitif X€</p>
-        <p>Mise à jour X€</p>
-        <p>Location</p>
+        <p>
+          Notre centre de réservation de tests psychotechniques recense tous les examens psychotechniques
+          agréés par les préfectures françaises dans le cadre d’un nouveau permis, suspendu ou permis annulé. Cette étape
+          est obligatoire pour pouvoir récupérer le permis de conduire !
+        </p>
       </div>
       <div class="col-6">
         <table>
@@ -59,18 +64,18 @@
           </tr>
           <tr>
             <td>1 ans</td>
-            <td>X€</td>
-            <td>X€</td>
+            <td>2000€</td>
+            <td>166€</td>
           </tr>
           <tr>
             <td>3 ans</td>
-            <td>X€</td>
-            <td>X€</td>
+            <td>5000€</td>
+            <td>138€</td>
           </tr>
           <tr>
             <td>5 ans</td>
-            <td>X€</td>
-            <td>X€</td>
+            <td>7000€</td>
+            <td>116€</td>
           </tr>
         </table>
       </div>
@@ -79,18 +84,15 @@
 
   <section id="clients">
     <div class="col-6 d-flex justify-content-end">
-      <img src="/images/logo_appsy.png" height="250px">
+      <img src="/images/handshake.png" height="250px">
     </div>
     <div class="col-6">
       <h3>Nos clients</h3>
-      <p>Déjà X clients</p>
-      <p>auto écoles et centres de formations</p>
-      <p>étoiles intéractives</p>
-      <p> Nam ut justo eget quam aliquam bibendum nec et erat. Praesent aliquet justo at eros pellentesque sollicitudin.
-        Proin pharetra scelerisque tempus. Phasellus consequat, elit semper finibus fringilla, enim urna scelerisque sapien, nec aliquet
-        ligula eros id libero. Nullam ut gravida quam, sit amet commodo quam. Donec egestas tortor vel lorem vulputate, ut vulputate nisi blandit.
-        Sed commodo varius augue eget fringilla. Nam ut justo eget quam aliquam bibendum nec et erat. Nam ut justo eget quam aliquam bibendum nec et erat.
-        Nam ut justo eget quam aliquam bibendum nec et erat.
+      <p>Déjà 12 centre de formation et 8 auto-écoles nous font confiance pour plus de 18 000 utilisateurs !</p>
+      <p>Notre système s’adresse aux auto-écoles et aux centres de formation de conducteurs de trains ou d’engins de chantier et de grutiers.</p>
+      <p>
+        Nous recevons des clients devons passer des tests psychotechniques quelles que soit leurs motifs. Du nouveau conducteur au conducteur
+        invalidé de permis, vous pourrez bénéficier avec Testify de tests rapide, adapté et sécurité afin de vous offrir la meilleure expérience possible.
       </p>
     </div>
   </section>
@@ -98,13 +100,10 @@
   <section id="review" class="bg-grey">
     <div class="col-6">
       <h3>On en parle</h3>
-      <p>Titres articles :
-      </p>
-      <p> Nam ut justo eget quam aliquam bibendum nec et erat. Praesent aliquet justo at eros pellentesque sollicitudin.
-        Proin pharetra scelerisque tempus. Phasellus consequat, elit semper finibus fringilla, enim urna scelerisque sapien, nec aliquet
-        ligula eros id libero. Nullam ut gravida quam, sit amet commodo quam. Donec egestas tortor vel lorem vulputate, ut vulputate nisi blandit.
-        Sed commodo varius augue eget fringilla. Nam ut justo eget quam aliquam bibendum nec et erat. Nam ut justo eget quam aliquam bibendum nec et erat.
-        Nam ut justo eget quam aliquam bibendum nec et erat.
+      <p>
+        A travers la France Testify est devenue la référence du test psychotechnique. Vous constaterez à travers
+        les réseaux sociaux tous les retours positif que nous recevons quotidiennement. Ainsi, nos taux de satisfaction élevées
+        sont le reflétet de nos démarches simples et rapide.
       </p>
     </div>
     <div class="col-6">
@@ -119,11 +118,8 @@
     <div class="col-6">
       <h3>Infinite Measures</h3>
       <p>Description de l'entreprise et quelques chiffres clés.</p>
-      <p> Nam ut justo eget quam aliquam bibendum nec et erat. Praesent aliquet justo at eros pellentesque sollicitudin.
-        Proin pharetra scelerisque tempus. Phasellus consequat, elit semper finibus fringilla, enim urna scelerisque sapien, nec aliquet
-        ligula eros id libero. Nullam ut gravida quam, sit amet commodo quam. Donec egestas tortor vel lorem vulputate, ut vulputate nisi blandit.
-        Sed commodo varius augue eget fringilla. Nam ut justo eget quam aliquam bibendum nec et erat. Nam ut justo eget quam aliquam bibendum nec et erat.
-        Nam ut justo eget quam aliquam bibendum nec et erat.
+      <p>
+        à discuter avec le client.
       </p>
     </div>
   </section>
