--- a/public/styles/testify.css
+++ b/public/styles/testify.css
@@ -100,8 +100,7 @@ section {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding: 40px 80px 40px 80px;
 }
 
 .bg-grey {
