Ajout du mail de contact de l'administrateur sur la page de contact

--- a/src/views/home/contact.html
+++ b/src/views/home/contact.html
@@ -36,6 +36,9 @@
         </div>
       </form>
     </div>
+    <div class="row justify-content-center" style="margin-top: 15px">
+      <h3>{{ translate 'HOME_CONTACT_MAIL' }} <a href="mailto:admin@testify.com">admin@testify.com</a></h3>
+    </div>
   </div>
 </section>
 
