Ajout des dashboard par type d'utilisateur + debut dashboard user

--- a/public/styles/testify_dashboard.css
+++ b/public/styles/testify_dashboard.css
@@ -218,3 +218,8 @@ table th {
 .status-2 {
   background: linear-gradient(to right, rgba(50, 205, 50, 0.3), rgba(255, 255, 255, 0));
 }
+
+.pie {
+  width: 25% !important;
+  height: 25% !important;
+}
