--- a/src/views/dashboard/home_examiner.html
+++ b/src/views/dashboard/home_examiner.html
@@ -12,7 +12,7 @@
 
 <div class="container">
   <div class="row justify-content-center">
-    <h2>Dashboard</h2>
+    <h2>Dashboard - Examiner</h2>
   </div>
 </div>
 
