--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -117,9 +117,11 @@
     </div>
     <div class="col-6">
       <h3>Infinite Measures</h3>
-      <p>Description de l'entreprise et quelques chiffres clés.</p>
+      <p>Infinite Measures est un leader du marché des tests psychotechniques, leur expertise doublé de leur longue
+        expérience ont été retransmises dans une solution unique afin de permettre à différents acteurs de s'assurer
+        des pleines conditions physiques qui leurs sont nécessaire.</p>
       <p>
-        à discuter avec le client.
+        Venez donc tester vos performances chez Infinite measures: les spécialistes des mesures psychotechniques !
       </p>
     </div>
   </section>
